[package]
name = "drox-task-marinade-staking"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "drox_task_marinade_staking"
path = "src/lib.rs"

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
solana-program = "1.18.8"  # match your Solana CLI version
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = "2.0.0"
